<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_stu_topo"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stu_historico"
            android:icon="@drawable/ic_historico"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_stu_lst_servicos"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_lst_servicos" />
        <item
            android:id="@+id/nav_stu_add_servicos"
            android:icon="@drawable/ic_edit"
            android:title="@string/menu_add_servico" />
    </group>
    <group
        android:id="@+id/menu_stu_abaixo"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_stu_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_stu_hor_func"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_hor_func" />
        <item
            android:id="@+id/nav_stu_sobre"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_stu_sair"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sair" />
    </group>

</menu>
