<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Studio.CadastroStudioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cnpj"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="#363636"
            android:text="@string/endereco"
            android:textSize="22dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_logradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logradouro"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_residencia"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bairro"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stu_cad_txt_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textColor="#363636"
            android:text="@string/hor_func"
            android:textSize="22dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dias_semana"
            android:textColor="#363636"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stu_cad_hor_fun_txt_semana_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hor_func_inicio"
                    android:inputType="time"
                    android:focusable="false"
                    android:timePickerMode="clock" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stu_cad_hor_fun_txt_semana_fim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hor_func_fim"
                    android:inputType="time"
                    android:focusable="false"
                    android:timePickerMode="clock" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="#363636"
            android:text="@string/fim_semana_feriados"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/stu_cad_hor_fun_chk_fds_feriados_fechado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="8dp"
            android:textSize="18dp"
            android:textColor="#757575"
            android:checked="false"
            android:text="@string/hor_func_fechado"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/stu_cad_lin_lay">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stu_cad_hor_fun_txt_fds_feriados_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hor_func_inicio"
                    android:inputType="time"
                    android:focusable="false"
                    android:timePickerMode="clock"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stu_cad_hor_fun_txt_fds_feriados_fim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hor_func_fim"
                    android:inputType="time"
                    android:focusable="false"
                    android:timePickerMode="clock"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stu_cad_btn_cadastrar"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:text="@string/cadastrar"
                android:backgroundTint="@color/colorBlack"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>